demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: docker.io/nginx:alpine3.18-slim
          # image: docker.io/httpd:2.4.58-alpine
          ports:
            - containerPort: 80
              name: http
