demo/workload.yaml
# apiVersion: apps/v1
# kind: Deployment
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: docker.io/nginx:alpine3.18-slim
          # image: docker.io/httpd:2.4.58-alpine
          ports:
            - containerPort: 80
              name: http
  strategy:
    blueGreen:
      activeService: web
      previewService: web-preview
      autoPromotionEnabled: true # ojo
      previewReplicaCount: 1
      prePromotionAnalysis:
        templates:
          - templateName: job
        args:
          - name: service-name
            value: web-preview.demo.svc.cluster.local
      postPromotionAnalysis:
        templates:
          - templateName: job
        args:
          - name: service-name
            value: web.demo.svc.cluster.local
