demo/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-preview
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: http
