demo/ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-preview
  labels:
    name: demo
spec:
  rules:
    - host: demo.kubefest.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-preview
                port:
                  name: http
